# pong-plus-plus

./: CMakeLists.txt  album.cpp  album.h  cantaret.cpp  cantaret.h  cantec.cpp  cantec.h  cantec_aniversar.cpp  cantec_aniversar.h  colind.cpp  colind.h  erori_cantec.cpp  erori_cantec.h  grupare_artistica.cpp  grupare_artistica.h  joc.cpp  joc.h  jucator.cpp  jucator.h  jucator_impl.cpp  main.cpp  menuet.cpp  menuet.h
